# ansible-role-rsyslog

./: README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yaml
handlers/: main.yaml
meta/: main.yaml
molecule/ci/: converge.yml
molecule/default/: converge.yml
tasks/: main-alpine.yaml  main-debian.yaml  main-ubuntu.yaml  main.yaml
templates/etc/: rsyslog.conf.j2
templates/etc/rsyslog.d/: 10-remote.conf.j2  11-local.conf.j2
