[tool.poetry]
name = "ansible-role-rsyslog"
version = "0.1.0"
description = "Asymworks Rsyslog Ansible Role"
authors = ["Jonathan Krauss <jkrauss@asymworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.6"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.2"
molecule = {extras = ["docker", "lint"], version = "^3.5.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
